Bug 25046 - [945GM bisected] rendercheck/mcoords regressed
Summary: [945GM bisected] rendercheck/mcoords regressed
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-11 18:15 UTC by Shuang He
Modified: 2009-11-14 19:44 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Shuang He 2009-11-11 18:15:41 UTC
System Environment:
--------------------------
Xf86_video_intel        (master)14109abf285866ad4cd99d0cd16b0954a0a73a62 
Mesa    (master)e4a19ffb13746ae4f62adca412d086d9461ff432 
Kernel  (drm-intel-next)5b8f0be0dce012d190a53d55240fe3fde6306476 
Libdrm  (master)89cc98c0d5c1b43a883f13210c472339dde1a4cf
Xserver (master)f4377afcf002be89632cbb0700f4d8e4ad7db45c

Bug detailed description:
-------------------------
This issue happens on both 945GM and 945GME.
rendercheck case mcoords regressed.
This is due to following commit:
commit e581ceb7381e29ecc1a172597d258824f6a1d2d3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Nov 10 11:14:23 2009 +0000

    i915: Use the color channels to pass along solid sources and masks.

    Instead of allocating and utilising the texture samplers for 1x1R
    solid sources and masks we can simply use the default diffuse and
    specular colour channels and adjust the fragment shader appropriately.
    The big advantage is the reduction in size of batches which should give
    a good boost to glyph performance, irrespective of the additional boost
    from using simpler shaders.

    However, the motivating factor behind the switch is that our use of 1x1
    textures turns out to be buggy...

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 1 Chris Wilson 2009-11-13 11:09:33 UTC
commit e9064eacb0ad8867e320597453facbb3c376522c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 13 18:35:44 2009 +0000

    uxa: Do not remove repeat from solids for 1x1 composites.
    
    Or else we hit the buggy 1x1 source path and trigger:
    
      rendercheck/mcoords regressed
      http://bugs.freedesktop.org/show_bug.cgi?id=25046
    
    caused by the recent commit e581ceb.

Comment 2 Shuang He 2009-11-14 19:44:37 UTC
Thanks, verified on 945GM and 945GME against:
Xf86_video_intel:               (master)c180baf43b8a0e407448018f3a7e42491cf974ae
Mesa:           (master)57f40b18377f87c434f17d5670a13838d58065c9
Libdrm:         (master)83a35b68f45cebc70152e55ed3f99db485c9a7cd
Xserver:                (master)801f0e59800ea4a3f6c85b22dea6f2c400bda703
Kernel:       (drm-intel-next)5b8f0be0dce012d190a53d55240fe3fde6306476


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.